--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GymList" />
+        android:theme="@style/Theme.GymList">
+
+    <activity
+        android:name="Controlers.MainActivity"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+
+    <activity android:name="Controlers.WorkoutEditorActivity" />
+    <activity android:name="Controlers.ActiveSessionActivity" />
+    <activity android:name="Controlers.AddAssessmentActivity" />
+
+    </application>
 
 </manifest>
