adicionado exclusao e edicao de workouts, testes basicos realizados

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     </activity>
 
     <activity android:name="Controlers.WorkoutEditorActivity" />
-    <activity android:name="Controlers.ActiveSessionActivity" />
+    <activity android:name="Controlers.WorkoutDetailsActivity" />
     <activity android:name="Controlers.AddAssessmentActivity" />
     <activity android:name="Controlers.AssessmentDetailsActivity"/>
 
