adicionado logica de adicao de ciclos com selecao de workouts em cada ciclo, apenas o rascunho realizado, falta pente fino e finalizacao

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
     <activity android:name="Controlers.WorkoutDetailsActivity" />
     <activity android:name="Controlers.AddAssessmentActivity" />
     <activity android:name="Controlers.AssessmentDetailsActivity"/>
+    <activity android:name="Controlers.CycleEditorActivity"/>
 
     </application>
 
